# nio-assignments

./: LICENSE  README.md  pyproject.toml
notebooks/: a01-lp-exec.ipynb  atividade01-lp-exec.ipynb  atividade02-ilp-exec.ipynb  atividade04-heuristics.ipynb  atividade05-levy.ipynb  heuristic.py
