[project]
name = "nio"
version = "0.1.0"
description = "Activities of the Nature-Inspired Optimization course of PPGEE-UFPA, held in the 2025.2 term."
authors = [
    {name = "Helder Matos",email = "msthelder@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
